Resolves tdf#160731 Navigate by recency does not work under gtk3 +

wayland

I think the lines of code removed by this patch were meant to allow
recency to remember the cursor position before being moved to a start/
end/previous/next word or sentence position by an UNO dispatch command. These are already taken care of in the slot execute function void
SwTextShell::ExecMoveLingu.

Change-Id: I8bf231ea4cbb03125f54332a41c5544f9094b768
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166350
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>